# tdt2023algorithm

./: LICENSE  README.md  build_release.sh  dockerfile.arm64  dockerfile.arm64.qemu  requirements.txt
src/databag_tool/: CMakeLists.txt  config_record.yaml  package.xml  user.md
src/databag_tool/src/: bag_recorder.hpp  merge_bags.cpp  record.cpp
src/interface/localization_interface/: CMakeLists.txt  package.xml
src/interface/localization_interface/msg/: LAM2Nav.msg  Loca2Nav.msg
src/roborts_center_usart/: CMakeLists.txt  package.xml
src/roborts_center_usart/include/roborts_center_usart/: base_usart.h  crc_tools.h  usart.h  usart_black_board.h  usart_info_summary.h
src/roborts_center_usart/include/roborts_center_usart/recver/: commander_usart_recver.h  gyroscope_usart_recver.h  match_info_usart_recver.h  speed_usart_recver.h  vision_usart_recever.h
src/roborts_center_usart/include/roborts_center_usart/sender/: command_reply_usart_sender.h  navigation_path_sender.h  navigation_usart_sender.h  vision_usart_sender.h
src/roborts_center_usart/src/: crc_tools.cpp  main.cpp  usart.cpp
src/roborts_decision/robot_info_predict/: CMakeLists.txt  package.xml
src/roborts_decision/robot_info_predict/include/robot_info_predict/: robot_info_predict.h
src/roborts_navigation/: CMakeLists.txt  osqp.md  package.xml
src/roborts_navigation/command_map/info/: rmuc.jsonc
src/roborts_navigation/cost_map/towords_dis_map/: qingdao.map  rmul.map  train1.map
src/roborts_navigation/include/roborts_navigation/: controler.h  navigation.h  navigation_debug.h
src/roborts_navigation/include/roborts_navigation/backend/: base_backend.h  direct_backend.h  hybrid_astar_backend.h  minimumsnap.h  multi_polyfit_backend.h  polyfit_backend.h
src/roborts_navigation/include/roborts_navigation/frontend/: astar_frontend.h
src/roborts_navigation/launch/: navigation_launch.py
src/roborts_navigation/map_info/: qingdao.jsonc  rmuc.jsonc  rmul.jsonc  train1.jsonc  train2.jsonc
src/roborts_navigation/src/: controler.cpp  main.cpp  navigation.cpp  navigation_debug.cpp
src/roborts_navigation/src/backend/: hybrid_astar_backend.cpp  minimumsnap.cpp  multi_polyfit_backend.cpp  polyfit_backend.cpp
src/roborts_navigation/src/frontend/: astar_frontend.cpp
src/roborts_navigation/utils/: utils_calc_map_con.cpp  utils_calc_map_min_dis  utils_calc_map_towords_dis.cpp  utils_draw_command_map  utils_draw_show_map  utils_draw_slope_map
src/roborts_utils/: CMakeLists.txt  package.xml
src/roborts_utils/include/roborts_utils/: base_blackboard.h  base_class.h  base_communicator.h  base_msg.h  base_param.h  base_taskscheduler.h  base_toolkit.h  config.h  debug.h  roborts_utils.h
src/roborts_utils/src/: base_blackboard.cpp  base_class.cpp  base_communicator.cpp  base_msg.cpp  base_param.cpp  base_taskscheduler.cpp  base_toolkit.cpp  config.cpp
src/roborts_vision/node_detect/: CMakeLists.txt  package.xml
src/roborts_vision/node_detect/include/armor_detect/: ArmorDetectInfo.h  LightBarInfo.h  armor_detect.h
src/roborts_vision/node_detect/include/base_detect/: base_detect.h
src/roborts_vision/node_detect/openvino/: CMakeLists.txt  Yolov5faceDetector.cpp  Yolov5faceDetector.h  number_detector.cpp  number_detector.h  openvino_number_detector.cpp  openvino_number_detector.h
src/roborts_vision/node_detect/openvino/v5 480*480/: Yolov5faceDetector.cpp  Yolov5faceDetector.h
src/roborts_vision/node_detect/openvino/v5 640*480/: Yolov5faceDetector.h
src/roborts_vision/node_detect/openvino/v7 640*480/: Yolov5faceDetector.cpp  Yolov5faceDetector.h
src/roborts_vision/node_detect/src/: main.cpp
src/roborts_vision/node_detect/src/armor_detect/: armor_detect.cpp
src/roborts_vision/node_detect/tensorrt/: calibrator.cpp  logging.h  preprocess.cu  trt_number_detector.cpp  trt_yolo_detector.cpp  trt_yolo_detector.h
src/roborts_vision/node_predict/: CMakeLists.txt  package.xml
src/roborts_vision/node_predict/src/: main.cpp
src/roborts_vision/roborts_camera/: CMakeLists.txt  package.xml
src/roborts_vision/roborts_camera/src/: camera.cpp  hikvisioncam.cpp  main.cpp  tdtcamera.cpp
src/robot_localization/front_end/: .gitmodules  CMakeLists.txt  README.md  package.xml
src/robot_localization/front_end/config/: avia.yaml  mid360.yaml  ouster64.yaml  velodyne.yaml
src/robot_localization/front_end/include/: common_lib.h  timestamp_transform.hpp
src/robot_localization/front_end/launch/: mapping_mid360_launch.py  mapping_velodyne_launch.py  matching_mid360_launch.py  matching_velodyne_launch.py  rviz_launch.py
src/robot_localization/front_end/rviz_cfg/: lio.rviz
src/robot_localization/front_end/src/: Estimator.cpp  Estimator.h  IMU_Processing.hpp  laserMapping.cpp  parameters.cpp  parameters.h  preprocess.cpp  preprocess.h
src/robot_localization/localization_toolkit/: CMakeLists.txt  package.xml
src/robot_localization/localization_toolkit/cmake/: g2o.cmake
src/robot_localization/robot_localization/: CMakeLists.txt  package.xml  第三方库依赖安装.md
src/robot_localization/robot_localization/cmake/: glog.cmake  gtsam.cmake  pcl.cmake  protobuf.cmake  sophus.cmake
src/robot_localization/robot_localization/config/: livox_lidar.yaml  user_setting.yaml
src/robot_localization/robot_localization/launch/: data_pretreat_launch.py  lio_optimization_launch.py  localization_launch.py  matching_LAM_launch.py  pcd_process_launch.py  simulink_localization_launch.py
src/robots_perception/: CMakeLists.txt  package.xml
src/robots_perception/include/robots_perception/: record.h  robots_perception.h
src/robots_perception/launch/: robots_perception.launch.py
src/robots_perception/openvino/: CMakelists.txt  openvino_Yolo.cpp  openvino_Yolo.h  openvino_number_detector.cpp  openvino_number_detector.h
src/robots_perception/src/: main.cpp  record.cpp  robots_perception.cpp
src/robots_perception/tensorrt/: CMakeLists.txt  calibrator.h  preprocess.h  trt_number_detector.cpp  trt_number_detector.h  yolo.cu  yolo.hpp
src/tdt_sentry/: CMakeLists.txt  package.xml
src/tdt_sentry/launch/: sentry_launch.py
(+295 files in other folders)
