<?xml version="1.0"?>
<package format="3">
  <name>roborts_center_usart</name>
  <version>1.0.0</version>
  <description>Center Usart Package.</description>
  <maintainer email="359360997@qq.com">tdt-Yastruhank</maintainer>
  <license>Close Source</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  
  <depend>sensor_msgs</depend>

  <depend>localization_interface</depend>
  <depend>navigation_interface</depend>
  <depend>vision_interface</depend>
  
  <depend>roborts_utils</depend>

  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
