<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roborts_utils</name>
  <version>1.0.0</version>
  <description>toolkits</description>
  <maintainer email="359360997@qq.com">yas</maintainer>
  <license>Close Source</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  
  <depend>base_interface</depend>
  <depend>vision_interface</depend>

  <depend>OpenCV</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>
  <depend>OpenMP</depend>
  <depend>jsoncpp</depend>
  <depend>Boost</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
