<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>node_detect</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2360838113@qq.com">zll-yyds</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- <depend>robots_utils</depend> -->
    <depend>roborts_utils</depend>

  <depend>vision_interface</depend>
  <depend>rclcpp</depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>roborts_camera</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
