<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>node_predict</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2360838113@qq.com">zll-yyds</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>OpenCV</depend>
  <depend>roborts_utils</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_interface</depend>
  <depend>perception_interface</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
