cmake_minimum_required(VERSION 3.10)
project(openvino)
set(OpenVINO_DIR /opt/tdt/openvino/runtime/cmake/)
find_package(OpenVINO REQUIRED)
find_package(OpenCV REQUIRED)
aux_source_directory(. SRC)
add_library(${PROJECT_NAME}  ${SRC})
target_include_directories(${PROJECT_NAME} PUBLIC ${OpenCV_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR})
target_link_libraries(${PROJECT_NAME} openvino::runtime ${OpenCV_LIBS})